force-app/main/default/objects/OSP_Lead__c/OSP_Lead__c.object-meta.xml
<CustomObject>
    <label>OSP Lead</label>
    <nameField>
        <label>OSP Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSP Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>