force-app/main/default/objects/OSP_Lead__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Tawang</fullName>
            </value>
            <value>
                <fullName>Bhismaknagar</fullName>
            </value>
            <value>
                <fullName>Pasighat</fullName>
            </value>
            <value>
                <fullName>Ziro</fullName>
            </value>
            <value>
                <fullName>Bomdila</fullName>
            </value>
            <value>
                <fullName>Guwahati</fullName>
            </value>
            <value>
                <fullName>Tezpur</fullName>
            </value>
            <value>
                <fullName>Dibrugarh</fullName>
            </value>
            <value>
                <fullName>Silchar</fullName>
            </value>
            <value>
                <fullName>North Lakhimpur</fullName>
            </value>
            <value>
                <fullName>Gaya</fullName>
            </value>
            <value>
                <fullName>Biharsharif</fullName>
            </value>
            <value>
                <fullName>Darbhanga</fullName>
            </value>
            <value>
                <fullName>Bhagalpur</fullName>
            </value>
            <value>
                <fullName>Bilaspur</fullName>
            </value>
            <value>
                <fullName>Korba</fullName>
            </value>
            <value>
                <fullName>Durg-Bhilainagar</fullName>
            </value>
            <value>
                <fullName>Raigarh</fullName>
            </value>
            <value>
                <fullName>Rajnandgaon</fullName>
            </value>
            <value>
                <fullName>Vasco-da-Gama</fullName>
            </value>
            <value>
                <fullName>Ponda</fullName>
            </value>
            <value>
                <fullName>Margao</fullName>
            </value>
            <value>
                <fullName>Mapusa</fullName>
            </value>
            <value>
                <fullName>Goa Velha</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>