force-app/main/default/objects/OSP_Lead__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>